turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:64: error: ';' expected but ')' found.
  rule = Array( Array( Array(0,LEFT,1), Array(1,RIGHT,1) ),Array( Array(1,NOTURN,0), Array(1,NOTURN,1) ) ) );
                                                                                                           ^